# pivid

./: .envrc  .gitattributes  .gitignore  :w  LICENSE.md  README.md  TODO.md  atomic.txt  bezier_spline.cpp  bezier_spline.h  bezier_spline_test.cpp  conanfile.py  conanfile.txt  cubic_bezier.cpp  cubic_bezier.h  cubic_bezier_test.cpp  dev_setup.py  display_mode.cpp  display_mode.h  display_mode_gen.py  display_mode_test.cpp  display_output.cpp  display_output.h  file_descriptor.h  frame_buffer.h  frame_loader.cpp  frame_loader.h  frame_loader.old.cpp  frame_loader.old.h  frame_player.cpp  frame_player.h  geometry.h  geometry_test.cpp  image_buffer.cpp  image_buffer.h  interval.cpp  interval.h  interval_set.h  interval_set_test.cpp  interval_test.cpp  (+49 more)
conan_recipes/: upload_to_artifactory.py
conan_recipes/ffmpeg/: conanfile.py
conan_recipes/ffmpeg+rpi/: conanfile.py
conan_recipes/libdrm/: conandata.yml  conanfile.py
doc/: architecture.md  notes.md  protocol.md  running.md  script.md
ffmpeg_recipe/: conandata.yml  deploy.py
ffmpeg_rpi_recipe/: conandata.yml  conanfile.py  ffmpeg-5.1.3-rpi_22.patch  ffmpeg-5.1.4-rpi_22.patch
hello_drmprime/: Makefile  README.txt  drmprime_out.c  drmprime_out.h  hello_drmprime.c
test_media/: big_buck_bunny_excerpt.hevc.mkv  big_buck_bunny_fast.json  big_buck_bunny_reverse.json  chess.pal8.t  jellyfish_2disp.json  jellyfish_buffer.py  jellyfish_hdmi_1.json  jellyfish_jesse.json  jellyfish_kitten.json  jellyfish_kitten_2disp.json  jellyfish_loop.json  jellyfish_loop_2disp.json  jellyfish_reverse.json  jellyfish_with_overlays.json  puppets.hevc-a.mov  rickroll_drop.py  rickroll_grid.json  test_compositor_overload.json  test_grid.json  test_memory_overload.json  totoro_loop.json
